# blockchain_solvency

./: .gitignore  Cargo.toml  README.md  package-lock.json  thread.rs
circuit/: liabilities.circom
circuit/liabilities_js/: liabilities.r1cs  liabilities.wasm
circuits/: inclusion.circom  inclusion.r1cs  inclusion.sym  liabilities_changes_folding.circom  liabilities_changes_folding.r1cs  liabilities_changes_folding.sym
circuits/compile/: inclusion.r1cs  inclusion.sym  liabilities_changes_folding.r1cs  liabilities_changes_folding.sym
circuits/compile/inclusion_cpp/: inclusion.cpp
circuits/compile/inclusion_js/: inclusion.wasm
circuits/compile/liabilities_changes_folding_js/: liabilities_changes_folding.wasm
circuits/inclusion_cpp/: inclusion.cpp
circuits/inclusion_js/: inclusion.wasm
circuits/liabilities_changes_folding_js/: liabilities_changes_folding.wasm
src/: block.rs  blockchain.rs  cli.rs  client.rs  errors.rs  lib.rs  main.rs  proofs.rs  server.rs  stream.rs  tests.rs
src/blockchain/: block.rs  blockchain.rs
src/proofs/: inclusion.rs  liabilities.rs  setup.rs  util.rs
src/stream/: cli.rs  client.rs  requests.rs  server.rs
tests/: proof_tests.rs
