[package]
name = "blockchain-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.8.1"
hyper = "0.11.7"
futures = "0.1.17"
net2 = "0.2.31"
num_cpus = "1.0"
tokio-core = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
failure = "0.1"
bincode = "1.3"
sha2 = "0.10.6"
rust-crypto = "^0.2"
clap = "4.0.29"
ff = "0.13.0"
pasta_curves = "0.5.1"
circom-scotia = "0.2.0"
bellpepper-core = "0.4.0"
merkle-sum-tree = { git = "https://github.com/AntoineCyr/merkle_sum_proof" }
nova-snark = "0.23.0"
nova_scotia = { path = "../nova_scotia" }
hex = "0.4.3"
num = "0.4.3"
